[gd_scene load_steps=6 format=3 uid="uid://dn3fqg3shbn01"]

[ext_resource type="Script" path="res://Menu/Menu.gd" id="1_558dy"]
[ext_resource type="LabelSettings" uid="uid://d6gohf1yj5gp" path="res://Fonts/title.tres" id="1_saoh3"]
[ext_resource type="Theme" uid="uid://bvd8u171meh78" path="res://Fonts/menu_button.tres" id="2_ctv5i"]
[ext_resource type="StyleBox" uid="uid://lr75ncsg3vbm" path="res://Fonts/button_style.tres" id="4_28j2p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_068ao"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.629674, 0.629675, 0.629675, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 10

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_558dy")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -467.0
offset_top = 50.0
offset_right = 467.0
offset_bottom = 182.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Multiple choice app!"
label_settings = ExtResource("1_saoh3")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="StartMultipleChoiceButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ctv5i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("4_28j2p")
theme_override_styles/hover = ExtResource("4_28j2p")
theme_override_styles/pressed = ExtResource("4_28j2p")
text = "Start multiple choice quiz"

[node name="EditMultipleChoiceQuestionsButton2" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ctv5i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("4_28j2p")
theme_override_styles/hover = ExtResource("4_28j2p")
theme_override_styles/pressed = ExtResource("4_28j2p")
text = "Edit multiple choice questions"

[node name="ExportButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ctv5i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("4_28j2p")
theme_override_styles/hover = ExtResource("4_28j2p")
theme_override_styles/pressed = ExtResource("4_28j2p")
theme_override_styles/disabled = ExtResource("4_28j2p")
disabled = true
text = "Export current lectures, chapters and questions"

[node name="ImportButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ctv5i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_068ao")
theme_override_styles/hover = ExtResource("4_28j2p")
theme_override_styles/pressed = ExtResource("4_28j2p")
theme_override_styles/disabled = ExtResource("4_28j2p")
disabled = true
text = "Import current lectures, chapters and questions"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -66.0
offset_top = -115.0
offset_right = 66.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("2_ctv5i")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("4_28j2p")
theme_override_styles/hover = ExtResource("4_28j2p")
theme_override_styles/pressed = ExtResource("4_28j2p")
text = "Quit"

[connection signal="pressed" from="ButtonsContainer/StartMultipleChoiceButton" to="." method="StartMultipleChoice"]
[connection signal="pressed" from="ButtonsContainer/EditMultipleChoiceQuestionsButton2" to="." method="EditMultipleChoiceQuestions"]
[connection signal="pressed" from="QuitButton" to="." method="OnQuitButtonPressed"]
